--- a/experiments/two_stream/Penrose.ipynb
+++ b/experiments/two_stream/Penrose.ipynb
@@ -2,43 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "print_all_CGS (generic function with 2 methods)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "using Plots\n",
     "using QuadGK\n",
     "using NLopt\n",
     "using SpecialFunctions\n",
     "using NLsolve\n",
+    "using Measures\n",
     "include(\"../../scaling_CGS.jl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.1807305771571771e17"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#---------- Two Steam Setup ----------\n",
     "base = BaseUnits(\"CGS\")\n",
@@ -59,7 +40,7 @@
     "length= 227.71078654314857\n",
     "number_density=1e10\n",
     "B_flux=10\n",
-    "temperature   = 59298985.44815759\n",
+    "temperature   = 2.3719594179263036e6  # Corresponds to v_t_e = 0.1*V_0  for V_0 = 0.2*c \n",
     "temperature_e = temperature\n",
     "temperature_p = temperature\n",
     "\n",
@@ -78,19 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Penrose_criterion (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Penrose criterion function\n",
     "#   Note, this is based only on electrons and protons are neglected\n",
@@ -110,19 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Setup is no longer unstable if thermal velocity reaches 4.59e+09 m/s\n",
-      "Relative to drift this is 0.76555\n",
-      "This corresponds to a temperature of: 1.39e+08 K\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#---------- Find unstable limit for \"real\" physical values --------------\n",
     "\n",
@@ -156,29 +117,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Setup is no longer unstable if thermal velocity reaches 2.25e-02 [ code units ]\n",
-      "Relative to drift this is 0.76555\n",
-      "This corresponds to a temperature of: 1.39e+08 K\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#---------- Find unstable limit for scaled code values --------------\n",
     "\n",
     "c = scaling.c_code\n",
+    "\n",
+    "\n",
+    "omega_e = scaling.electron_plasma_freq_code\n",
+    "omega_p = scaling.proton_plasma_freq_code\n",
+    "\n",
+    "debye_e = scaling.debye_len_code\n",
+    "debye_i = scaling.v_thermal_p_code / scaling.proton_plasma_freq_code\n",
+    "v_t_e = scaling.v_thermal_e_code\n",
+    "v_t_p = scaling.v_thermal_p_code\n",
     "\n",
     "m_e = scaling.m_e_code\n",
     "\n",
     "k_B = scaling.k_B_code\n",
     "\n",
     "V_0 = scaling.c_code * 0.2\n",
+    "\n",
+    "println(v_t_e / V_0 )\n",
     "\n",
     "U0 = 1e-15 #Should be zero but integrals crash so just make it a small value compared to the velocities \n",
     "\n",
@@ -203,6 +165,82 @@
     "\n",
     "#Note - the ratio between v_t_limit and v_0 should be the same as the real units \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function W_val(z)\n",
+    "    #TODO Add special cases for small and large z???\n",
+    "    return 1. + 1im * z * sqrt(pi) * faddeeva(z)\n",
+    "end\n",
+    "\n",
+    "function full_dispertion_relation(omega, k, V0, v_t_e, v_t_i, debye_e, debye_i)\n",
+    "    z_plus  = (omega / k + V0) / (sqrt(2.) * v_t_e)\n",
+    "    z_minus = (omega / k - V0) / (sqrt(2.) * v_t_e)\n",
+    "    z_0     = (omega / k )     / (sqrt(2.) * v_t_i)\n",
+    "    \n",
+    "    electorn_part_1 = 1.0 / ( debye_e * k )^2.0 * 1.0/2.0 * W_val(z_plus)\n",
+    "    electorn_part_2 = 1.0 / ( debye_e * k )^2.0 * 1.0/2.0 * W_val(z_minus)\n",
+    "    ion_part        = 1.0 / ( debye_i * k )^2.0           * W_val(z_0)\n",
+    "    #TODO Make sure there is no factor sqrt(2) hiding somewhere \n",
+    "    #return 1. + electorn_part_1 + electorn_part_2 + ion_part\n",
+    "    #return - (electorn_part_1 + electorn_part_2 + ion_part)\n",
+    "    return - (electorn_part_1 + electorn_part_2 )\n",
+    "\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = 1.0 * omega_e / V_0\n",
+    "\n",
+    "omega_scale = 20\n",
+    "temp_scales = [1.0, 2.0, 3.0, 4.0, 6.0, 7.0, 7.6555, 8.0]\n",
+    "\n",
+    "omega_arr = collect(range(- omega_scale * omega_e,stop=omega_scale* omega_e, length=10000))\n",
+    "\n",
+    "\n",
+    "plots = []\n",
+    "\n",
+    "for temp_scale in temp_scales\n",
+    "    v_t_e_new = v_t_e * temp_scale\n",
+    "    v_t_p_new = v_t_p * temp_scale \n",
+    "    debye_e_new = v_t_e / omega_e\n",
+    "    debye_i_new = v_t_p / omega_p\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    G = full_dispertion_relation.(omega_arr, k, V_0, v_t_e_new, v_t_p_new, debye_e_new, debye_i_new)\n",
+    "\n",
+    "    G_scaled  = G /  (k / omega_e)^2;\n",
+    "    println(G_scaled[1:10])\n",
+    "\n",
+    "    ratio = 1e-1 * temp_scale\n",
+    "\n",
+    "    ratio_string = @sprintf(\"%.4f\" , ratio)\n",
+    "\n",
+    "    p = plot(G_scaled, xlabel=\"Re(G) / (k/omega_e)^2\", ylabel=\"Im(G) / (k/omega_e)^2\", label=\"G\", title=\"V_t / V_0 = $ratio_string\")\n",
+    "    push!(plots, p)\n",
+    "end\n",
+    "\n",
+    "p = plot(plots..., layout=(4,2), size=(1600,2000), left_margin=10mm, bottom_margin= 10mm)\n",
+    "#savefig(p, \"General_penrose.png\")#, dpi=300)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
