[DEV] added markdown with explanation of how code units gets translated to real units

--- a/tests/code_to_real.ipynb
+++ b/tests/code_to_real.ipynb
@@ -148,6 +148,144 @@
     "new_scaling = find_real_units_CGS(c_u, r_u, r_s)\n",
     "print_basic_info(new_scaling)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Equations used to calculate convsersion\n",
+    "\n",
+    "### Constants\n",
+    "- $c_{code} = $ speed of light in code values\n",
+    "- $B_{code} = $ Magnetic field strength in code values\n",
+    "- $P_{code} = $ pressure in code values\n",
+    "- $\\rho_{code} = $ mass density in code values\n",
+    "---\n",
+    "- $c_{real} = $ speed of light in real units\n",
+    "- $B_{real} = $ Magnetic field strength in real units\n",
+    "- $P_{real} = $ pressure in real values\n",
+    "- $\\rho_{real} = $ mass density in real units\n",
+    "---\n",
+    "- $t_s = $ time scaling\n",
+    "- $l_s = $ length scaling\n",
+    "- $m_s = $ mass scaling\n",
+    "- $\\rho_s = \\frac{m_s}{l_s^3}$ mass density scaling\n",
+    " \n",
+    " \n",
+    "### Basic equations\n",
+    "\n",
+    "1)\n",
+    "$$ c_{code} = c_{real} \\frac{t_s}{l_s}$$\n",
+    "2)\n",
+    "$$ B_{code} = B_{real} \\frac{\\sqrt{m_s}}{\\sqrt{l_s} t_s}$$\n",
+    "3)\n",
+    "$$ P_{code} = P_{real} \\frac{m_s}{l_s t_s}$$\n",
+    "4)\n",
+    "$$ \\rho_{code} = \\rho_{real} \\frac{1}{\\rho_s} = \\rho_{real} \\frac{l_s^3}{m_s}$$\n",
+    "\n",
+    "### Combinations and reformulation of basic equations\n",
+    "\n",
+    "Restructuring 1)\n",
+    "\n",
+    "5)\n",
+    "$$ l_s = \\frac{c_{real}}{c_{code}} t_s$$\n",
+    "\n",
+    "\n",
+    "Combining equation 2 and 3 yields:\n",
+    "\n",
+    "6) \n",
+    "$$\\frac{P_{real}}{P_{code}} = \\left( \\frac{B_{real}}{B_{code}} \\right)^2$$\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extracting real values\n",
+    "\n",
+    "### Extracting temperature\n",
+    "\n",
+    "First need to equation for the electron thermal velocity\n",
+    "$$v_{t-e-real} = \\sqrt{\\frac{k_B * T}{m_e}} $$\n",
+    "This can also written as\n",
+    "$$v_{t-e-real} =  \\sqrt{\\frac{p_e}{\\rho_e}}$$\n",
+    "where $p_e$ and $\\rho_e$ is the electron pressure and mass density. \n",
+    "So we have \n",
+    "$$ \\sqrt{\\frac{p_e}{\\rho_e}} = \\sqrt{\\frac{k_B * T}{m_e}}$$\n",
+    "\n",
+    "\n",
+    "Now, assuming that we have $P_e$ and $\\rho_e$ in code units. We then need to scale the real units of $k_B$, $T$, and $m_e$ to code units for the equation to match: \n",
+    "\n",
+    "$$ \\sqrt{\\frac{p_e}{\\rho_e}} = \\sqrt{\\frac{k_B \\frac{t_s^2 T_s}{m_s l_s^2} * T \\frac{1}{T_s}}{m_e \\frac{1}{m_s}}}$$\n",
+    "where $T_s$ is not the temperature scaling - note however that this has no effect and we can leave it out. \n",
+    "We can rewrite this to \n",
+    "$$ \\sqrt{\\frac{p_e}{\\rho_e}} = \\sqrt{\\frac{k_B * T}{m_e}} \\frac{t_s}{l_s}$$\n",
+    "And isolating the temperature we can get:\n",
+    "\n",
+    "$$T = \\frac{P_e}{\\rho_e} \\frac{m_e}{k_B} \\left( \\frac{l_s}{t_s} \\right)^2$$\n",
+    "Looking at equation 1) we can rewrite this to \n",
+    "$$T = \\frac{P_e}{\\rho_e} \\frac{m_e}{k_B} \\left( \\frac{c_{real}}{c_{code}} \\right)^2$$\n",
+    "\n",
+    "Finally, we can rewrite this in terms of the total plasma density and pressure as:\n",
+    "\n",
+    "\n",
+    "7)\n",
+    "$$T = \\frac{P_{code}}{\\rho_{code}} \\frac{\\mu m_u}{k_B} \\left( \\frac{c_{real}}{c_{code}} \\right)^2$$\n",
+    "\n",
+    "where $m_u$ is the elementary mass in real units, and $k_B$ is Botlzmanns constant in real units\n",
+    "\n",
+    "----\n",
+    "### Extracting real pressure\n",
+    "\n",
+    "Extracting the real pressure is now rather straight forward.\n",
+    "\n",
+    "8)\n",
+    "$$P_{real} =  \\frac{\\rho_{real}}{\\mu * m_u} * k_B * T  $$\n",
+    "\n",
+    "---\n",
+    "### Finding the real magnetic field strength \n",
+    "We can then use equation 6) to find the magnetic field strength:\n",
+    "\n",
+    "9)\n",
+    "$$B_{real} = B_{code} \\sqrt{\\frac{P_{real}}{P_{code}}}$$\n",
+    "---\n",
+    "### Finding length scale\n",
+    "\n",
+    "To find the length scale we need one length in code units.\n",
+    "For this, I have used the Debye length:\n",
+    "\n",
+    "$$\\lambda_D = \\frac{v_{t-e}}{\\omega_e} = \\frac{\\sqrt{\\frac{k_B T}{m_e}}}{q_e \\sqrt{\\frac{4 \\pi n_e}{m_e}}} = \\frac{\\sqrt{k_B T}}{q_e \\sqrt{4 \\pi n_e}} $$\n",
+    "\n",
+    "Similar to before, we insert the debye length in code units, but use other variables in real units and insert the proper scaling factors:\n",
+    "\n",
+    "$$\\lambda_D = \\frac{\\sqrt{k_B \\frac{t_s^2 T_s}{m_s l_s^2} * T \\frac{1}{T_s}}}{q_e \\frac{t_s}{l_s^{3/2} \\sqrt{m_s}} \\sqrt{4 \\pi n_e l_s^3}} $$\n",
+    "Here, we can isolate the length scale as:\n",
+    "\n",
+    "10)\n",
+    "$$l_s = \\frac{1}{q_e \\lambda_D} \\sqrt{\\frac{k_B T}{4 \\pi n_e}}$$\n",
+    "Where again, $q_e$ is the elemetary charge in real units, $k_B$ is in real units, $n_e$ is in real units, $T$ is in real units, and $\\lambda_D$ is in code units. \n",
+    "\n",
+    "---\n",
+    "### Finding the time scale\n",
+    "\n",
+    "With the length scale found we easily find the time scale looking back at equation 1)\n",
+    "\n",
+    "11)\n",
+    "$$t_s = l_s \\frac{c_{code}}{c_{real}} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Important comments\n",
+    "\n",
+    "Note that if any physical variables are \"fudged\" this must be applied to the \"real physical unit\" in the above equations. For example, increasing the mass of the electron will cause equation 7) to give a higher temperature. Likewise, reducing the speed of light will yield a smaller temperature. \n",
+    "\n",
+    "Changing the elementary mass will change the length scale by an equal factor"
+   ]
   }
  ],
  "metadata": {
