[DEV] changed how electron mass scaling is set for initial scaling

--- a/experiments/boundary_experiment/scaled_parameters.ipynb
+++ b/experiments/boundary_experiment/scaled_parameters.ipynb
@@ -109,7 +109,9 @@
     "#---------- Double current sheet setup ----------\n",
     "base = BaseUnits(\"CGS\")\n",
     "\n",
-    "electron_mass_scaling = 73.44610695040268 # mass ratio of 25\n",
+    "electron_proton_mass_ratio = 25.0\n",
+    "\n",
+    "electron_mass_scaling = (base.m_p / base.m_e) / electron_proton_mass_ratio\n",
     "charge_scaling = 1e0 #1e-5\n",
     "eps_0_scaling = 1e0 #1e2\n",
     "mu_0_scaling = 1e0\n",
