[DEV] massive update of experiments scalings - may clean later

--- a/experiments/double_current_sheet/current_sheet_scaling.ipynb
+++ b/experiments/double_current_sheet/current_sheet_scaling.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "print_all_CGS (generic function with 2 methods)"
+       "print_basic_info (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,8 +60,8 @@
       "                   Proton Mass [ g ]               =  1.6726e-24  1.1424e-11  1.4641e-13\n",
       "                 Electron Mass [ g ]               =  9.1094e-28  1.1424e-11  7.9740e-17\n",
       "             Elementary Charge [ StatC ]           =  4.8032e-10  7.9288e+04  6.0579e-15\n",
-      "           Vacuum Permittivity [ ]                 =  1.1127e-21  3.4471e-20  3.2278e-02\n",
-      "           Vacuum Permeability [ s^2 cm^-2 ]       =  1.0000e+00  1.0000e+00  1.0000e+00\n",
+      "           Vacuum Permittivity [ s^2 cm^-2 ]       =  8.8542e-23  3.4471e-20  2.5686e-03\n",
+      "           Vacuum Permeability [  ]                =  1.2566e+01  1.0000e+00  1.2566e+01\n",
       "                Speed of Light [ cm/s ]            =  2.9979e+10  5.3861e+09  5.5661e+00\n",
       "                 Electron Volt [ erg ]             =  1.6022e-12  3.3140e+08  4.8345e-21\n",
       "         Mean molecular weight [ ]                 =  5.0391e-01  1.0000e+00  5.0391e-01\n",
@@ -101,7 +101,7 @@
       " Characteristic kinetic energy [ erg ]             =  1.3580e+06  3.3140e+08  4.0978e-03\n",
       "               energy per mass [ erg g^-1]         =  1.1888e+17  2.9010e+19  4.0978e-03\n",
       "             energy per volume [ erg cm^-3]        =  1.9894e+02  4.8549e+04  4.0978e-03\n",
-      "      Characteristic  pressure [ Ba ]              =  1.3806e-01  4.8549e+04  2.8438e-06\n"
+      "      Characteristic  pressure [ Ba ]              =  2.7613e-01  4.8549e+04  5.6877e-06\n"
      ]
     }
    ],
@@ -143,6 +143,15 @@
     "\n",
     "\n",
     "#scaling.p_gyro_radiues_real / scaling.debye_len_real"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaling.B_real^2 / ()"
    ]
   },
   {
