[DEV] updated original code to real test

--- a/tests/code_to_real.ipynb
+++ b/tests/code_to_real.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "find_real_units_CGS (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "using Plots\n",
     "using QuadGK\n",
@@ -22,36 +12,17 @@
     "#using SpecialFunctions\n",
     "using NLsolve\n",
     "using Statistics\n",
-    "include(\"../scaling_CGS.jl\")\n",
-    "include(\"../code_to_real_CGS.jl\")"
+    "#include(\"../scaling_CGS.jl\")\n",
+    "#include(\"../scaling_HL.jl\")\n",
+    "\n",
+    "include(\"../code_to_real.jl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lenght                 = 904.8851631947057\n",
-      "number_density         = 1.0e9\n",
-      "B                      = 50.0\n",
-      "T                      = 1.0000000000000001e6\n",
-      "\n",
-      "length_scale           = 904.8851631947057\n",
-      "mass_density_scale     = 1.7395267739199998e-15\n",
-      "time_scale             = 3.0183720071927414e-7\n",
-      "temperature_scale      = 1.0\n",
-      "\n",
-      "e_mass_scale           = 73.44610695040268\n",
-      "charge_scaling         = 1.0\n",
-      "eps_0_scaling          = 1.0\n",
-      "mu_0_scaling           = 1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#---------- Double current sheet setup ----------\n",
     "base = BaseUnits(\"CGS\")\n",
@@ -100,35 +71,14 @@
     "\n",
     "set_macro_particle_weights(scaling, ds, per_cell);\n",
     "#print_all_CGS(scaling)\n",
-    "print_basic_info(new_scaling)"
+    "print_basic_info(scaling)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lenght                 = 904.8851631947057\n",
-      "number_density         = 1.0e9\n",
-      "B                      = 50.0\n",
-      "T                      = 1.0000000000000001e6\n",
-      "\n",
-      "length_scale           = 904.8851631947057\n",
-      "mass_density_scale     = 1.7395267739199998e-15\n",
-      "time_scale             = 3.0183720071927414e-7\n",
-      "temperature_scale      = 1.0\n",
-      "\n",
-      "e_mass_scale           = 73.44610695040268\n",
-      "charge_scaling         = 1.0\n",
-      "eps_0_scaling          = 1.0\n",
-      "mu_0_scaling           = 1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c_code = scaling.c_code\n",
     "B_code = scaling.B_flux_code\n",
@@ -148,7 +98,36 @@
     "\n",
     "\n",
     "new_scaling = find_real_units_CGS(c_u, r_u, r_s)\n",
-    "print_basic_info(new_scaling)"
+    "print_basic_info(new_scaling)\n",
+    "print_all_CGS(new_scaling)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_code = scaling.c_code\n",
+    "B_code = scaling.B_flux_code / sqrt(4 * pi)\n",
+    "p_code = scaling.pressure_code\n",
+    "rho_code = scaling.mass_density_code\n",
+    "debye_code = scaling.debye_len_code \n",
+    "\n",
+    "\n",
+    "\n",
+    "c_u = code_units(c_code, B_code, p_code, rho_code, debye_code)\n",
+    "r_u = known_real_units(scaling.number_density_real)\n",
+    "eps_0_scaling = 1e0\n",
+    "charge_scaling = 1e0\n",
+    "electron_proton_mass_ratio = scaling.m_p_real / scaling.m_e_real\n",
+    "\n",
+    "r_s = ratios_and_scaling(electron_proton_mass_ratio, eps_0_scaling, charge_scaling)\n",
+    "\n",
+    "\n",
+    "new_scaling = find_real_units_HL(c_u, r_u, r_s)\n",
+    "print_basic_info(new_scaling)\n",
+    "print_all_HL(new_scaling)"
    ]
   },
   {
@@ -286,8 +265,25 @@
     "\n",
     "Note that if any physical variables are \"fudged\" this must be applied to the \"real physical unit\" in the above equations. For example, increasing the mass of the electron will cause equation 7) to give a higher temperature. Likewise, reducing the speed of light will yield a smaller temperature. \n",
     "\n",
-    "Changing the elementary mass will change the length scale by an equal factor"
+    "Changing the elementary mass will change the length scale by an equal factor\n",
+    "\n",
+    "\n",
+    "### Additional comment\n",
+    "Depending on wheter to use Heaviside or Gaussian units, the equations will slightly change.\n",
+    "For Heaviside, the factor $4 \\pi$ when finding length scale should be omitted. \n",
+    "\n",
+    "If units are given in Heaviside, but you are using Gaussian, you may need to scale magnetic field with $B_{CGS} = B_H * \\sqrt{4 \\pi}$ and the debye length by $\\lambda_{D-CGS} = \\lambda_{D-H} / (4 \\pi )$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
