[DEV] updated get_scale, and made new seperate folder with functions

--- a/tests/get_scale.ipynb
+++ b/tests/get_scale.ipynb
@@ -6,141 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "include(\"../code_to_real.jl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "function get_scaleHL(r_s, real_units, c_code, ds, per_cell, scale_type)\n",
-    "    base = BaseUnits(\"HL\")\n",
-    "    #------ calculate electron mass scaing based on ratio of electron to proton mass -----\n",
-    "    electron_mass_scaling = (base.m_p / base.m_e) / r_s.electron_proton_ratio\n",
-    "    #-------------------------------------------------------------------------------------\n",
-    "    scale_base_units(base, r_s.eps_0_scaling, 1.0, electron_mass_scaling, r_s.q_charge_scaling)\n",
-    "    \n",
-    "    \n",
-    "    mu = ( (base.m_e + base.m_p)  / 2. ) /  base.m_u# assuming only protons and electrons\n",
-    "\n",
-    "\n",
-    "    B = real_units.B_field\n",
-    "    T = real_units.T\n",
-    "    T_elec = T\n",
-    "    T_ion = T\n",
-    "    n_p = real_units.number_density \n",
-    "    rho = real_units.mass_density\n",
-    "\n",
-    "    if (n_p> 0.0) && (rho> 0.0) \n",
-    "        error(\"Both number density and mass density are positive. Only one should be positive\")\n",
-    "    end \n",
-    "\n",
-    "    if (n_p > 0.0) \n",
-    "        rho = n_p * 2 * mu * base.m_u\n",
-    "    elseif (rho > 0.0) \n",
-    "        n_p = rho / (2 * mu * base.m_u)\n",
-    "    else\n",
-    "        error(\"Both number density and mass density are negative. One should be positive\")\n",
-    "    end \n",
-    "\n",
-    "\n",
-    "    rho_scale = rho \n",
-    "    T_scale= 1.0\n",
-    "\n",
-    "    #------- scale type 1 we set timescale to electron plasma freqeuncy, then set c ------\n",
-    "    if (scale_type == 1) \n",
-    "        e_plasma = base.e * sqrt(n_p / base.m_e)\n",
-    "        time_scale         = 2pi / e_plasma\n",
-    "        l_scale            = time_scale * base.c  /   c_code\n",
-    "    elseif (scale_type == 2) \n",
-    "        p_plasma = base.e * sqrt(n_p / base.m_p)\n",
-    "        p_skin_depth = base.c / p_plasma\n",
-    "\n",
-    "        l_scale = p_skin_depth\n",
-    "        time_scale = l_scale / base.c * c_code\n",
-    "    else\n",
-    "        error(\"scale type not implemented\")\n",
-    "    end\n",
-    "\n",
-    "    L = l_scale\n",
-    "\n",
-    "\n",
-    "    scaling = ScalingHL(base,\n",
-    "                    n_p, L, T, T_elec, T_ion, B,\n",
-    "                    l_scale, rho_scale, time_scale, T_scale)\n",
-    "\n",
-    "    set_macro_particle_weights(scaling, ds, per_cell)\n",
-    "    return scaling\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "function get_scaleCGS(r_s, real_units, c_code, ds, per_cell, scale_type)\n",
-    "    base = BaseUnits(\"CGS\")\n",
-    "    #------ calculate electron mass scaing based on ratio of electron to proton mass -----\n",
-    "    electron_mass_scaling = (base.m_p / base.m_e) / r_s.electron_proton_ratio\n",
-    "    #-------------------------------------------------------------------------------------\n",
-    "    scale_base_units(base, r_s.eps_0_scaling, 1.0, electron_mass_scaling, r_s.q_charge_scaling)\n",
-    "    \n",
-    "    \n",
-    "    mu = ( (base.m_e + base.m_p)  / 2. ) /  base.m_u# assuming only protons and electrons\n",
-    "\n",
-    "\n",
-    "    B = real_units.B_field\n",
-    "    T = real_units.T\n",
-    "    T_elec = T\n",
-    "    T_ion = T\n",
-    "    n_p = real_units.number_density \n",
-    "    rho = real_units.mass_density\n",
-    "\n",
-    "    if (n_p> 0.0) && (rho> 0.0) \n",
-    "        error(\"Both number density and mass density are positive. Only one should be positive\")\n",
-    "    end \n",
-    "\n",
-    "    if (n_p > 0.0) \n",
-    "        rho = n_p * 2 * mu * base.m_u\n",
-    "    elseif (rho > 0.0) \n",
-    "        n_p = rho / (2 * mu * base.m_u)\n",
-    "    else\n",
-    "        error(\"Both number density and mass density are negative. One should be positive\")\n",
-    "    end \n",
-    "\n",
-    "\n",
-    "    rho_scale = rho \n",
-    "    T_scale= 1.0\n",
-    "\n",
-    "    #------- scale type 1 we set timescale to electron plasma freqeuncy, then set c ------\n",
-    "    if (scale_type == 1) \n",
-    "        e_plasma = base.e * sqrt(4pi * n_p / base.m_e)\n",
-    "        time_scale         = 2pi / e_plasma\n",
-    "        l_scale            = time_scale * base.c  /   c_code\n",
-    "    elseif (scale_type == 2) \n",
-    "        p_plasma = base.e * sqrt(4pi * n_p / base.m_p)\n",
-    "        p_skin_depth = base.c / p_plasma\n",
-    "\n",
-    "        l_scale = p_skin_depth\n",
-    "        time_scale = l_scale / base.c * c_code\n",
-    "    else\n",
-    "        error(\"scale type not implemented\")\n",
-    "    end\n",
-    "\n",
-    "    L = l_scale\n",
-    "\n",
-    "\n",
-    "    scaling = ScalingCGS(base,\n",
-    "                    n_p, L, T, T_elec, T_ion, B,\n",
-    "                    l_scale, rho_scale, time_scale, T_scale)\n",
-    "\n",
-    "    set_macro_particle_weights(scaling, ds, per_cell)\n",
-    "    return scaling\n",
-    "end"
+    "include(\"../get_scale.jl\")"
    ]
   },
   {
@@ -203,6 +69,13 @@
     "print_basic_info(scaling_CGS)\n",
     "print_all_CGS(scaling_CGS)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
