[DEV] updated get_scale and example to have scale_type=3 where we scale length according to electron skin depth

--- a/examples/scale_from_real_units.ipynb
+++ b/examples/scale_from_real_units.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "include(\"../get_scale.jl\")"
+    "include(\"../get_scale.jl\") # load "
    ]
   },
   {
@@ -21,7 +21,7 @@
     "\n",
     "Note that for this example, the alfven speed, gyro frequency, and gyro radius will differ from CGS and HL.\n",
     "This is because a B field of 10G is not equivalent in CGS and HL. \n",
-    "For the same equivalent field strength the strength should be reduced by a factor sqrt(4pi) in HL (and increased similarly in CGS)\n",
+    "For the same equivalent field strength the strength should be reduced by a factor sqrt(4pi) in HL (or increased similarly in CGS)\n",
     "\n",
     "WARNING - there is limited error handling so use with care"
    ]
@@ -39,26 +39,25 @@
     "r_s = ratios_and_scaling(electron_proton_mass_ratio, eps_0_scaling, charge_scaling)\n",
     "#--------------------------------------------\n",
     "#------------- real values ----------------\n",
-    "B = 10.0\n",
-    "T = 1e6\n",
+    "B = 10.0    # Magnetic field strength in Gauss\n",
+    "T = 1e6     # Temperature in Kelvin\n",
     "    #------ set either number density or mass density positive. the other will be ignorde\n",
-    "number_density = 1e9 \n",
-    "mass_density = -1.0 \n",
+    "number_density = 1e9 # in cm^-3\n",
+    "mass_density = -1.0  # in g/cm^3\n",
     "    #------------------------------------------\n",
     "real_units = real_unit_input(number_density, mass_density, B, T)\n",
     "#------------------------------------------\n",
     "#---------------- some code unit information ----------------\n",
-    "c_code = 100.0\n",
-    "ds = 0.05\n",
-    "per_cell = 128\n",
+    "c_code = 100.0  # speed of light in code units\n",
+    "ds = 0.05       # cell size in code units\n",
+    "per_cell = 128  # number of macro particles per cell\n",
     "#-------------------------------------------------------------\n",
-    "\n",
     "#--------- scale type ----------------\n",
     "# 1: sets timescale so \\omega_{pe} = 2pi  in code units, then length scale so c=c_code\n",
     "# 2: sets lengthscale so ion_skin_depth=1, then timescale so c=c_code\n",
-    "scale_type = 2\n",
+    "# 3: sets lengthscale so electron_skin_depth=1, then timescale so c=c_cod\n",
+    "scale_type = 3\n",
     "#------------------------------------\n",
-    "\n",
     "#---------------- get scaling in HL and CGS units ------------\n",
     "scaling_HL = get_scaleHL(r_s, real_units, c_code, ds, per_cell ,scale_type)\n",
     "scaling_CGS = get_scaleCGS(r_s, real_units, c_code, ds, per_cell,scale_type)\n",
@@ -84,6 +83,13 @@
     "print_basic_info(scaling_CGS)\n",
     "print_all_CGS(scaling_CGS)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
