[DEV] added some comments for scale_from_Code_units example

--- a/examples/scale_from_code_units.ipynb
+++ b/examples/scale_from_code_units.ipynb
@@ -33,14 +33,14 @@
     "#   Here we define the parameters in CGS \n",
     "#---------------------------------------------------------------------------------------\n",
     "#---------------- define the code units ----------------\n",
-    "c_code = 1.0\n",
-    "B_code = 0.05 \n",
-    "p_code = 0.0002\n",
-    "rho_code = 1.0\n",
+    "c_code = 1.0                  # speed of light\n",
+    "B_code = 0.05                 # magnetic field\n",
+    "p_code = 0.0002               # pressure (Note - ideal gas law is used to convert to temperature / internal energi)\n",
+    "rho_code = 1.0                # mass density in code units \n",
     "#-------------- define one code length which is also known (or can be derived) in real units ---------------\n",
     "#    in this case we define skin_depth=1.0 in code units, the unused value (debye) is set to some negative value\n",
-    "debye_code = -1 \n",
-    "skin_depth_code = 1.0\n",
+    "debye_code = -1         # debye length\n",
+    "skin_depth_code = 1.0   # ion skin depth\n",
     "#------------------------------------------------------\n",
     "c_u = code_units(c_code, B_code, p_code, rho_code, debye_code, skin_depth_code)\n",
     "#------------------------------------------------------\n",
@@ -81,14 +81,14 @@
     "#   Here we define the parameters in HL - note the 4pi difference from CGS\n",
     "#---------------------------------------------------------------------------------------\n",
     "#---------------- define the code units ----------------\n",
-    "c_code = 1.0\n",
-    "B_code = 0.05 / sqrt(4*pi) \n",
-    "p_code = 0.0002\n",
-    "rho_code = 1.0\n",
+    "c_code = 1.0                  # speed of light\n",
+    "B_code = 0.05 / sqrt(4*pi)    # magnetic field\n",
+    "p_code = 0.0002               # pressure (Note - ideal gas law is used to convert to temperature / internal energi)\n",
+    "rho_code = 1.0                # mass density in code units \n",
     "#-------------- define one code length which is also known (or can be derived) in real units ---------------\n",
     "#    in this case we define skin_depth=1.0 in code units, the unused value (debye) is set to some negative value\n",
-    "debye_code = -1 \n",
-    "skin_depth_code = 1.0\n",
+    "debye_code = -1         # debye length\n",
+    "skin_depth_code = 1.0   # ion skin depth\n",
     "#------------------------------------------------------\n",
     "c_u = code_units(c_code, B_code, p_code, rho_code, debye_code, skin_depth_code)\n",
     "#------------------------------------------------------\n",
